# PittoLog

./: .envrc  .gitignore  LICENSE  README.md  pyproject.toml
docs/: barcode_operation.md  db_schema.md  packaging.md  user_manual.md
docs/assets/: test_items_import.csv
src/pittolog/: app.py  db.py  main.py  models.py
src/pittolog/services/: barcode_image_service.py  barcode_workflow.py  loan_service.py
src/pittolog/ui/: main_window.py
tests/: test_barcode_image_service.py  test_barcode_workflow.py  test_db.py  test_loan_service.py  test_main.py  test_main_window_helpers.py
